# Limnoria-plugins

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Changelog.md  DEVELOPER_NOTES.md  Flowchart.md  ISSUE_draft.md  LICENCE.md  LICENSE  README.md  Release.md  Releases.md  TO-DO.md  __init__.py  botctl  config.py  conftest.py  cooldown.py  core.py  feeds.py  memory.py  plugin.bak  plugin.py  pyproject.toml  quotes.txt  requirements.txt  services.py  setup.py  storage.py  test.py  test_Wikipedia.py  test_architecture.py  travis.yml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black-action.yml  black.yml  codeql.yml  defender-for-devops.yml  github-actions-demo.yml  lint.yml  test.yml  tests.yml
config/: __init__.py
core/: __init__.py  chat.py  core.py  system.py  text.py
docs/: AsyncioPluginGuide.md  CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  Releases.md  TO-DO.md  TODO.md  architecture.md
examples/: sample_config.txt
local/: colour.py  colourtemp.py  colouruvi.py  formatting.py  icons.py  storage.py
plugins/Asyncio/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE.md  README.md  __init__.py  config.py  cooldown.py  plugin.py  pyproject.toml  setup.py
plugins/Asyncio/.github/: PULL_REQUEST_TEMPLATE.md
plugins/Asyncio/.github/workflows/: codeql.yml  test.yml
plugins/Asyncio/config/: __init__.py  runtime.py
plugins/Asyncio/core/: __init__.py  text.py
plugins/Asyncio/docs/: AsyncioPluginGuide.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  ROADMAP.md  Summary.md  omni-moderation-latest.md
plugins/Asyncio/services/: __init__.py  moderation.py
plugins/Asyncio/state/: __init__.py  runtime.py
plugins/Asyncio/tests/: test_core_chat.py  test_services_moderation.py  test_services_openai_client.py
plugins/DALnetID/: README.md  __init__.py  config.py  plugin.py  test.py
plugins/DALnetID/.github/workflows/: tests.yml
plugins/DALnetID/docs/: CONTRIBUTING.md
plugins/Dictionary/: README.md  config.py  plugin.py  pyproject.toml  requirements.txt  setup.py  test.py
plugins/Dictionary/.github/workflows/: codeql.yml
plugins/Geminoria/: LICENCE.md  README.md  Releases.md  SECURITY.md  __init__.py  architectural.md  config.py  plugin.py  pyproject.toml  system.py  test.py
plugins/Geminoria/.github/ISSUE_TEMPLATE/: bug_report.md
plugins/Geminoria/.github/workflows/: codeql.yml
plugins/Geminoria/config/: config.py  config_runtime.py
plugins/Geminoria/core/: __init__.py  core.py  services.py  system.py  textutils.py
plugins/Geminoria/docs/: CONTRIBUTING.md
plugins/Geminoria/state/: __init__.py
plugins/Geminoria/tests/: __init__.py  test.py  test_architecture.py
plugins/GoogleMaps/: README.md  __init__.py  plugin.py  pyproject.toml  test.py
plugins/GoogleMaps/docs/: CONTRIBUTING.md
plugins/ID/: README.md  __init__.py  plugin.py  test.py
plugins/ID/.github/workflows/: codeql.yml
plugins/ID/docs/: CONTRIBUTING.md
plugins/IMDb/: LICENCE.md  README.md  config.py  plugin.py  pyproject.toml  setup.py  test.py
plugins/IMDb/.github/workflows/: codeql.yml  test.yml
plugins/IMDb/docs/: CONTRIBUTING.md
plugins/ISO/: LICENCE.md  README.md  __init__.py  pyproject.toml
plugins/ISO/.github/workflows/: codeql.yml  test.yml
plugins/LocalControl/: .gitignore  README.md  __init__.py  botctl  config.py  plugin.py  pyproject.toml  test.py
plugins/LocalControl/docs/: CHANGELOG.md
plugins/Mem/: __init__.py  config.py  plugin.py  pyproject.toml
plugins/MyDNS/: CHANGELOG.md  README.md  __init__.py  config.py  cooldown.py  core.py  plugin.py  pyproject.toml  test.py
plugins/MyDNS/docs/: CONTRIBUTING.md
plugins/MyDNS/local/: colour.py
plugins/MyPing/: LICENCE.md  README.md  __init__.py  plugin.py  pyproject.toml
plugins/MyPing/.github/workflows/: codeql.yml  test.yml
plugins/MyPing/local/: colour.py
plugins/OnJoin/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  quotes.txt  test.py
plugins/OnJoin/docs/: CONTRIBUTING.md
plugins/Pulse/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  rendering.py  requirements.txt  storage.py  test.py
plugins/URLtitle/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
plugins/URLtitle/.github/workflows/: codeql.yml
plugins/URLtitle/docs/: CONTRIBUTING.md
plugins/UrbanDictionary/: LICENCE.md  README.md  config.py  plugin.py  pyproject.toml  setup.py  test.py  travis.yml
plugins/UrbanDictionary/.github/workflows/: codeql.yml
plugins/Weather/: .gitignore  LICENCE.md  README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
plugins/Weather/.github/workflows/: black.yml
plugins/Weather/docs/: CHANGELOG.md
plugins/Weather/local/: client.py  colourtemp.py
plugins/Wikipedia/: LICENSE.txt  README.md  __init__.py  test.py
plugins/Wikipedia/.github/workflows/: black.yml
plugins/WorldTime/: README.md  config.py  pyproject.toml
plugins/WorldTime/.github/workflows/: codeql.yml  tests.yml
plugins/WorldTime/docs/: CONTRIBUTING.md
services/: __init__.py  moderation.py  openai_client.py
state/: __init__.py  cache.py  memory.py
tests/: __init__.py  test.py  test_architecture.py  test_core_chat.py  test_core_text.py  test_services_moderation.py  test_services_openai_client.py  test_state_memory.py
