[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-localcontrol"
version = "1.1.0"
authors = [
    { name = "Barry KW Suridge" }
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
LocalControl = "limnoria_localcontrol"

[tool.black]
line-length = 79
target-version = ["py311"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.setuptools.package-dir]
"limnoria_localcontrol" = "."
"limnoria_localcontrol.local" = "local/"

[tool.setuptools.package-data]
"limnoria_localcontrol" = ["locales/*.po"]

[tool.pytest.ini_options]
python_files = ["test.py"]
