[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-worldtime"
version = "1.0.0"
description = "World time lookup plugin for Limnoria."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENCE.md" }
authors = [{ name = "Barry Suridge" }]
dependencies = ["pendulum"]
classifiers = [
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
WorldTime = "limnoria_worldtime"

[tool.black]
line-length = 79
target-version = ["py311"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.setuptools.package-dir]
"limnoria_worldtime" = "."
"limnoria_worldtime.local" = "local/"

[tool.setuptools.package-data]
"limnoria_worldtime" = ["locales/*.po"]

[project.urls]
Homepage = "https://github.com/Alcheri/WorldTime"
Source = "https://github.com/Alcheri/WorldTime"
Issues = "https://github.com/Alcheri/WorldTime/issues"
