[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-asyncio"
version = "1.1"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Barry Suridge", email = "barry.suridge@gmail.com" }]
license = { text = "AGPL-3.0-only" }
dependencies = ["openai", "python-dotenv"]
classifiers = [
    "Environment :: Plugins",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
Asyncio = "limnoria_asyncio"

[tool.setuptools.package-dir]
"limnoria_asyncio" = "."
"limnoria_asyncio.local" = "local/"

[tool.setuptools.package-data]
"limnoria_asyncio" = ["locales/*.po"]
