[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-dictionary"
version = "1.0.0"
description = "A Limnoria plugin providing dictionary lookups with clean, expressive output."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"

authors = [
  { name = "Alcheri", email = "barry.suridge@gmail.com" }
]

keywords = ["limnoria", "supybot", "plugin", "dictionary"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "mypy",
]

[project.entry-points.'limnoria.plugins']
Dictionary = "limnoria_dictionary"

[project.urls]
Homepage = "https://github.com/Alcheri/Dictionary"
Issues = "https://github.com/Alcheri/Dictionary/issues"

[tool.setuptools.package-dir]
"limnoria_dictionary" = "."
"limnoria_dictionary.local" = "local/"

[tool.setuptools.package-data]
"limnoria_dictionary" = ["locales/*.po"]

[tool.black]
line-length = 79
target-version = ["py310"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
python_files = ["test.py"]
