[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-myping"
version = "1.0.2"
description = "An alternative to Supybot's Ping function."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENCE.md" }
authors = [{ name = "Barry Suridge" }]
classifiers = [
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
MyPing = "limnoria_myping"

[tool.black]
line-length = 79
target-version = ["py36"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.setuptools.package-dir]
"limnoria_myping" = "."
"limnoria_myping.local" = "local/"

[tool.setuptools.package-data]
"limnoria_myping" = ["locales/*.po"]

[project.urls]
Homepage = "https://github.com/Alcheri/Plugins"
Source = "https://github.com/Alcheri/Plugins"
Issues = "https://github.com/Alcheri/Plugins/issues"
