[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-pulse"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Barry Suridge", email = "barry.suridge@gmail.com" }]
classifiers = [
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
Pulse = "limnoria_pulse"

[tool.black]
target-version = ["py310"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.setuptools.package-dir]
"limnoria_pulse" = "."
"limnoria_pulse.local" = "local/"

[tool.setuptools.package-data]
"limnoria_pulse" = ["locales/*.po"]

[project.urls]
Homepage = "https://github.com/Alcheri/Pulse"
Source = "https://github.com/Alcheri/Pulse"
Issues = "https://github.com/Alcheri/Pulse/issues"
