[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-urbandictionary"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Barry Suridge" }
]
dependencies = [
    "aiohttp",
]
classifiers = [
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
UrbanDictionary = "limnoria_urbandictionary"

[tool.black]
line-length = 79
target-version = ["py310"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.setuptools.package-dir]
"limnoria_urbandictionary" = "."
"limnoria_urbandictionary.local" = "local/"

[tool.setuptools.package-data]
"limnoria_urbandictionary" = ["locales/*.po"]
