[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-weather"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Barry Suridge", email = "barry.suridge@outlook.com" }]
dependencies = ["aiohttp"]
classifiers = [
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
Weather = "limnoria_weather"

[tool.setuptools.package-dir]
"limnoria_weather" = "."
"limnoria_weather.local" = "local/"

[tool.setuptools.package-data]
"limnoria_weather" = ["locales/*.po"]

[tool.pytest.ini_options]
python_files = ["test.py", "test_*.py", "*_test.py"]
